src/validation/tests/snapshots/rusty__validation__tests__generic_validation_tests__any_bit_does_not_allow_ints.snap
---
source: src/validation/tests/generic_validation_tests.rs
expression: res
---
SyntaxError { message: "Invalid type nature for generic argument: 'USINT' is no 'Bit'", range: [SourceRange { range: 133..134 }], err_no: type__invalid_nature }
SyntaxError { message: "Invalid type nature for generic argument: 'UINT' is no 'Bit'", range: [SourceRange { range: 207..208 }], err_no: type__invalid_nature }
SyntaxError { message: "Invalid type nature for generic argument: 'UDINT' is no 'Bit'", range: [SourceRange { range: 276..277 }], err_no: type__invalid_nature }
SyntaxError { message: "Invalid type nature for generic argument: 'ULINT' is no 'Bit'", range: [SourceRange { range: 345..346 }], err_no: type__invalid_nature }
SyntaxError { message: "Invalid type nature for generic argument: 'SINT' is no 'Bit'", range: [SourceRange { range: 414..415 }], err_no: type__invalid_nature }
SyntaxError { message: "Invalid type nature for generic argument: 'INT' is no 'Bit'", range: [SourceRange { range: 487..488 }], err_no: type__invalid_nature }
SyntaxError { message: "Invalid type nature for generic argument: 'DINT' is no 'Bit'", range: [SourceRange { range: 555..556 }], err_no: type__invalid_nature }
SyntaxError { message: "Invalid type nature for generic argument: 'LINT' is no 'Bit'", range: [SourceRange { range: 623..624 }], err_no: type__invalid_nature }

