src/validation/tests/snapshots/rusty__validation__tests__generic_validation_tests__any_char_does_not_allow_bits.snap
---
source: src/validation/tests/generic_validation_tests.rs
expression: "&diagnostics"
---
error[E062]: Invalid type nature for generic argument. BOOL is no ANY_CHAR
  ┌─ <internal>:3:58
  │
3 │         FUNCTION func1  : INT VAR x : BOOL; END_VAR test(x); END_FUNCTION
  │                                                          ^ Invalid type nature for generic argument. BOOL is no ANY_CHAR

error[E062]: Invalid type nature for generic argument. BYTE is no ANY_CHAR
  ┌─ <internal>:4:58
  │
4 │         FUNCTION func2  : INT VAR x : BYTE; END_VAR test(x); END_FUNCTION
  │                                                          ^ Invalid type nature for generic argument. BYTE is no ANY_CHAR

error[E062]: Invalid type nature for generic argument. WORD is no ANY_CHAR
  ┌─ <internal>:5:58
  │
5 │         FUNCTION func3  : INT VAR x : WORD; END_VAR test(x); END_FUNCTION
  │                                                          ^ Invalid type nature for generic argument. WORD is no ANY_CHAR

error[E062]: Invalid type nature for generic argument. DWORD is no ANY_CHAR
  ┌─ <internal>:6:59
  │
6 │         FUNCTION func4  : INT VAR x : DWORD; END_VAR test(x); END_FUNCTION
  │                                                           ^ Invalid type nature for generic argument. DWORD is no ANY_CHAR

error[E062]: Invalid type nature for generic argument. LWORD is no ANY_CHAR
  ┌─ <internal>:7:59
  │
7 │         FUNCTION func5  : INT VAR x : LWORD; END_VAR test(x); END_FUNCTION
  │                                                           ^ Invalid type nature for generic argument. LWORD is no ANY_CHAR
