src/validation/tests/snapshots/rusty__validation__tests__generic_validation_tests__any_date_does_not_allow_chars.snap
---
source: src/validation/tests/generic_validation_tests.rs
expression: "&diagnostics"
---
error[E062]: Invalid type nature for generic argument. CHAR is no ANY_DATE
  ┌─ <internal>:3:58
  │
3 │         FUNCTION func1  : INT VAR x : CHAR; END_VAR test(x); END_FUNCTION
  │                                                          ^ Invalid type nature for generic argument. CHAR is no ANY_DATE

error[E062]: Invalid type nature for generic argument. WCHAR is no ANY_DATE
  ┌─ <internal>:4:59
  │
4 │         FUNCTION func2  : INT VAR x : WCHAR; END_VAR test(x); END_FUNCTION
  │                                                           ^ Invalid type nature for generic argument. WCHAR is no ANY_DATE
